force-app/main/default/objects/SDO_SCOM_Customer_Review__c.object
<CustomObject>
    <fields>
        <fullName>ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProductId</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>SDO_SCOM_Customer_Reviews</relationshipLabel>
        <relationshipName>SDO_SCOM_Customer_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Rating__c</fullName>
        <description>Product Rating added by Customers between 0-5</description>
        <label>Product_Rating</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Review_Date__c</fullName>
        <label>Product_Review_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Review_Description__c</fullName>
        <description>Description of the Review written by the Customer</description>
        <label>Product_Review_Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Review_Title__c</fullName>
        <description>Title of the Review added by Customer</description>
        <label>Product_Review_Title</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>SDO_SCOM_Customer_Review</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Customer Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SDO_SCOM_Customer_Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>